--- a/.gitmodules
+++ b/.gitmodules
@@ -2,7 +2,7 @@
 	path = wp
 	url = git://core.git.wordpress.org/
 [submodule "content/themes/patternlab-wp-theme.git"]
-	path = content/themes/patternlab-wp-theme.git
+	path = content/themes/patternlab-wp-theme
 	url = git@github.com:peterwilsoncc/patternlab-wp-theme.git
 [submodule "content/mu-plugins/patternengine-wp"]
 	path = content/mu-plugins/patternengine-wp
